--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Brian Borncamp
-email: first last at google mail
+title: Entry Level IT Jobs
+email: contact@entrylevelitjobs.us
 description: >- # this means to ignore newlines until "baseurl:"
   .
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  borncamp
 
 # Build settings
-theme: minima
+theme: just-the-docs
 plugins:
  # - jekyll-feed
 
